_css/_modules.scss
/* ... */
.menu {
  a {
    background-color: transparent;
    color: map-get($foundation-palette, secondary);
  }
  ul {
    margin-left: 40px;
  }
  li {
    list-style: none;
  }
  .active > a {
    background-color: map-get($foundation-palette, secondary);
    color: $white;
  }
}

.product-color {
  background-repeat: no-repeat;
  background-size: cover;
  width: 100%;
  display: inline-block;
  position: relative;
  &:hover {
    box-shadow: inset 0 0 40px #000;
  }
  &:after {
    padding-top: 50%;
    display: block;
    content: '';
  }
  &.active {
    border: 4px solid #4fb2d5;
    box-shadow: inset 0 0 40px #000;
  }
}

.orbit-container {
  @include breakpoint(small only) {
    figcaption {
      font-size: 12px;
      padding: 10px;
    }
    a {
      font-size: 12px;
    }
  }
  .orbit-previous {
    background: url('/assets/images/theme/arrow-left.png') no-repeat right top;
    display: none;
    height: 55px;
    padding: 0 20px;
    width: 31px;
    &:hover, &:active, &:focus {
      background: url('/assets/images/theme/arrow-left.png') no-repeat right -58px;
    }
  }

  .orbit-next {
    background: url('/assets/images/theme/arrow-right.png') no-repeat left top;
    display: none;
    height: 55px;
    padding: 0 20px;
    width: 31px;
    &:hover, &:active, &:focus {
      background: url('/assets/images/theme/arrow-right.png') no-repeat left -58px;
    }
  }
}

.slideshow-with-thumbnails {
  @include breakpoint(medium down) {
    margin-bottom: 20px;
    margin-top: 20px;
  }
  h1 {
    margin: 0;
  }
  .slideshow {
    position: relative;
  }
  .orbit-next {
    margin-right: 11px;
  }
  .orbit-previous {
    margin-left: 11px;
  }
  .owl-item img {
    background-color: $white;
    border: 1px solid #e6e6e6;
    -moz-box-shadow: 0 4px 5px -1px #bbb;
    -webkit-box-shadow: 0 4px 5px -1px #bbb;
    box-shadow: 0 4px 5px -1px #bbb;
    padding: 10px;
    position: relative;
    width: 100%;
    z-index: 0;
  }
  .owl-thumbs {
    overflow-x: scroll;
    -webkit-overflow-scrolling: touch;
    margin-top: 10px;
    margin-bottom: 20px;
    white-space: nowrap;
    img {
      margin: 2px;
      width: 150px;
    }
  }
  .owl-nav {
    position: absolute;
    top: 0;
    height: 100%;
    width: 100%;
  }
  .owl-prev {
    background: url('/assets/images/theme/arrow-left.png') no-repeat right top;
    cursor: pointer;
    display: none;
    height: 55px;
    padding: 0 20px;
    position: absolute;
    top: 40%;
    transform: translateY(-55%);
    left: 10px;
    width: 31px;
    z-index: 2;
    &:hover, &:active, &:focus {
      background: url('/assets/images/theme/arrow-left.png') no-repeat right -58px;
    }
  }
  .owl-next {
    background: url('/assets/images/theme/arrow-right.png') no-repeat left top;
    cursor: pointer;
    display: none;
    height: 55px;
    padding: 0 20px;
    position: absolute;
    right: 10px;
    top: 40%;
    transform: translateY(-55%);
    width: 31px;
    z-index: 2;
    &:hover, &:active, &:focus {
      background: url('/assets/images/theme/arrow-right.png') no-repeat left -58px;
    }
  }
}

.slideshow-without-thumbnails {
  @include breakpoint(medium down) {
    margin-bottom: 20px;
  }
  h1 {
    margin: 0;
  }
  .slideshow {
    position: relative;
  }
  .orbit-next {
    margin-right: 11px;
  }
  .orbit-previous {
    margin-left: 11px;
  }
  .owl-item img {
    background-color: $white;
    border: 1px solid #e6e6e6;
    -moz-box-shadow: 0 4px 5px -1px #bbb;
    -webkit-box-shadow: 0 4px 5px -1px #bbb;
    box-shadow: 0 4px 5px -1px #bbb;
    padding: 10px;
    position: relative;
    width: 100%;
    z-index: 0;
  }
  .owl-thumbs {
    overflow-x: scroll;
    -webkit-overflow-scrolling: touch;
    margin-top: 10px;
    margin-bottom: 20px;
    white-space: nowrap;
    img {
      margin: 2px;
      width: 150px;
      display: none;
    }
  }
  .owl-nav {
    position: absolute;
    top: 0;
    height: 100%;
    width: 100%;
  }
  .owl-prev {
    background: url('/assets/images/theme/arrow-left.png') no-repeat right top;
    cursor: pointer;
    display: none;
    height: 55px;
    padding: 0 20px;
    position: absolute;
    top: 45%;
    transform: translateY(-45%);
    left: 10px;
    width: 31px;
    z-index: 2;
    &:hover, &:active, &:focus {
      background: url('/assets/images/theme/arrow-left.png') no-repeat right -58px;
    }
  }
  .owl-next {
    background: url('/assets/images/theme/arrow-right.png') no-repeat left top;
    cursor: pointer;
    display: none;
    height: 55px;
    padding: 0 20px;
    position: absolute;
    right: 10px;
    top: 45%;
    transform: translateY(-45%);
    width: 31px;
    z-index: 2;
    &:hover, &:active, &:focus {
      background: url('/assets/images/theme/arrow-right.png') no-repeat left -58px;
    }
  }
}

.blog #content {
  h1 {
    font-family: 'Josefin Slab';
    font-size: 35px;
    color: #4c4c4c;
  }

  h2 {
    font-family: 'Abel';
    font-size: 27px;
    color: #6b6b6b;
    font-weight: 300;
  }

  h3 {
    font-family: 'Abel';
    font-size: 22px;
    color: #1c778f;
    font-weight:300;
  }

  img {
    padding: 10px;
  }
}

.tabs {
  background: transparent;
  border: none;
}

.tabs-title {
  border-right: 1px solid transparent;
  @include breakpoint(small only) {
    margin-bottom: 1px;
  }
  a {
    background-color: #cdcccc;
    color: map-get($foundation-palette, primary);
    padding: .5rem .8rem;
    text-transform: uppercase;
    &:hover {
      background-color: #e5e3e3;
      color: #4fb1d5;
    }
  }
  &.is-active a {
    background-color: #e5e3e3;
    color: #4fb1d5;
  }
  @include breakpoint(small only) {
    float: none;
    a {
      line-height: 30px;
    }
  }
}

.tabs-content {
  background-color: #e5e3e3;
  h4 {
    font-size: 14px;
    margin-bottom: 10px;
  }
  p {
    font-size: 10px;
    line-height: 22px;
  }
}
/* ... */

